@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-26T08:11:41Z",
-  "count_outdated" : 1872,
-  "uniques_outdated" : 132,
-  "count" : 1894,
+  "timestamp" : "2022-08-26T16:10:51Z",
+  "count_outdated" : 1896,
+  "uniques_outdated" : 134,
+  "count" : 1908,
   "uniques" : 135,
   "views" : [
-    {
-      "timestamp": "2022-08-12T00:00:00Z",
-      "count": 10,
-      "count_minmax": [ 1, 24 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-08-13T00:00:00Z",
       "count": 12,
