@@ -1,12 +1,7 @@
 {
-  "count": 22,
-  "uniques": 2,
+  "count": 12,
+  "uniques": 1,
   "views": [
-    {
-      "timestamp": "2022-08-12T00:00:00Z",
-      "count": 10,
-      "uniques": 2
-    },
     {
       "timestamp": "2022-08-13T00:00:00Z",
       "count": 12,
